--- a/css/media-queries.styl
+++ b/css/media-queries.styl
@@ -1,3 +1,5 @@
+@import 'nib'
+@import 'common-variables'
 
 /* Smartphones (portrait and landscape) ----------- */
 @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
@@ -7,50 +9,69 @@
 
         .content-wrapper {
             box-sizing border-box
-            width 100%
+            width 100% !important
             padding 0 20px
             font-size 16px
 
             .language-options  {
-                width 211px !important
+                width 243px !important
 
                 li  {
-                    width 70px !important
+                    width 80px !important
+                    font-size 0.8em !important
 
                     .languageButton  {
                         padding 3px 8px !important
-                        font-size 0.8em !important
                     }
                 }
             }
 
             .moreLanguages {
                 width 37px !important
+                padding 5px
             }
 
             .language-modal {
                 .modal-wrapper {
                     .content-wrapper {
+                        padding-top 0
+
                         .language-options {
                             width 100% !important
+                            max-height 248px
+                            overflow scroll
+                            margin 0 auto !important
+                            padding-top 30px
 
                             li {
+                                font-size 0.6em !important
                                 width 25% !important
+
+                                .languageButton {
+                                    padding 3px 6px !important
+
+                                    &:hover {
+                                        border-color transparent
+                                    }
+                                }
                             }
+                        }
+
+                        a {
+                            font-size 1em
                         }
                     }
                 }
             }
 
-            h1 {
-                margin-top 10px
-                font-size 2.2em !important
+            img.logo {
+                height initial
+                margin auto
             }
 
-            h4 {
-                font-size 1em
-                font-weight 400
-                margin-top 20px
+            h2.slogan {
+                font-size 1.4em
+                margin-bottom 1em
             }
 
             p {
@@ -66,47 +87,65 @@
                 }
             }
 
-            #get-involved {
-                margin 20px 0 !important
-                font-size 2em
+            button {
+                &#submit, &#contact, &#volunteer {
+                    clear both
+                    font-size 1em
+                    width 100%
+                    margin 0 0 2px 0
+
+                    &:hover {
+                        background $wikitonguesBlue !important
+                    }
+                }
+
+                &#volunteer {
+                    margin 0
+                }
+
             }
 
             #social-media {
                 display inline-block
-                margin 5px 0 5px 0
+                margin 40px 0 5px 0
 
                 li {
-                    margin 0 0 10px 0 !important
+                    margin 0 !important
                     width 20%
                     float left
-
-                    &:last-of-type {
-                        margin-right 0
-                    }
 
                     a {
                         display inline-block
 
-
                         &:hover {
                             &.youtube {
-                                background #B12324
+                                img {
+                                    background #B12324
+                                }
                             }
 
                             &.facebook {
-                                background #3B59B7
+                                img {
+                                    background #3B59B7
+                                }
                             }
 
                             &.twitter {
-                                background #5C90CB
+                                img {
+                                    background #5C90CB
+                                }
                             }
 
                             &.tumblr {
-                                background #1E295B
+                                img {
+                                    background #1E295B
+                                }
                             }
 
                             &.instagram {
-                                background #3F729B
+                                img {
+                                    background #3F729B
+                                }
                             }
                         }
                     }
@@ -116,43 +155,84 @@
 
         footer {
             .content-wrapper {
-                p {
-                    display block
-                    font-size 1em
-                    font-weight 100
-                    margin 0
+                margin 0
 
-                    &:last-of-type {
-                        font-size .8em
-                        margin-top 20px
+                .copyright {
+                    margin-bottom 1.5em
+
+                    p {
+                        display block
+                        font-size 1.2em
+                        font-weight 100
+                        margin 0 0 0.8em 0
+
+                        &:first-of-type {
+                            font-size 1.4em
+
+                            img {
+                                height 29px
+                                margin 0 3px -7px 5px
+                            }
+                        }
+                    }
+                }
+
+                .links {
+                    width 100%
+                    margin-bottom 2em
+
+                    ul {
+                        margin 0
+                        font-size 0.7em
+                        float left
+
+                        &:last-of-type {
+                            float right
+                        }
+
+                        li {
+                            line-height 1.9em
+                        }
                     }
                 }
             }
         }
 
         #overlay {
+            form {
+                &#contact-form, &#volunteer-form, &#submit-form {
+                    width 100% !important
+                    box-sizing border-box
 
-            #contact-form {
-                width 100% !important
-                box-sizing border-box
+                    h1 {
+                        padding 0 0 10px 0 !important
+                    }
 
-                h1 {
-                    padding-bottom 10px
-                }
+                    .close {
+                        padding 0 !important
+                    }
 
-                input, textarea {
-                    border-radius 0
-                    background #fff
-                    font-size 1em
-                    border-top none
-                    border-bottom 1px solid #eaeaea
-                    margin 0
-                    padding 15px 7px !important
-                }
+                    input, textarea, p, label {
+                        border-radius 0
+                        background #fff
+                        font-size 0.7em
+                        border-top none
+                        border-bottom 1px solid #eaeaea
+                        margin 0
+                        padding 15px 7px !important
+                    }
 
-                #message {
-                    min-height 160px !important
-                    height 160px
+                    label {
+                        input {
+                            padding 0 20px 0 0 !important
+                        }
+                    }
+
+                    #message {
+                        border-bottom none
+                        min-height 160px !important
+                        height 160px
+                    }
                 }
             }
         }
