--- a/css/forms.styl
+++ b/css/forms.styl
@@ -12,6 +12,7 @@
     background rgba($wikitonguesBlue,0.97)
     cursor pointer
     overflow-y scroll
+    overflow-x initial
 
     form {
         &.displayed {
