--- a/css/about.styl
+++ b/css/about.styl
@@ -29,6 +29,11 @@ body {
 			font-weight bold
 			background none
 			padding 0
+			-webkit-transition hover .2s ease-in-out
+			-moz-transition hover .2s ease-in-out
+			-ms-transition hover .2s ease-in-out
+			-o-transition hover .2s ease-in-out
+			transition hover .2s ease-in-out
 
 			&:hover {
 				color lighten($wikitonguesBlue, 20%)
