--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -11,6 +11,15 @@
   body.about .content-wrapper:first-of-type .content {
     padding-bottom: 30px;
   }
+  body.about .content-wrapper:first-of-type .content p {
+    display: block;
+    font-size: 0.55em !important;
+    font-weight: 100;
+    margin-top: 0;
+  }
+  body.about .content-wrapper:first-of-type .content p.first-of-type {
+    margin-top: 15px;
+  }
   body.about .content-wrapper:first-of-type .content #volunteers-list li {
     width: 31%;
     margin: 0 0 30px 0;
@@ -19,13 +28,15 @@
   body.about .content-wrapper:first-of-type .content #volunteers-list li img {
     margin-bottom: 5px;
   }
-  body.about .content-wrapper:first-of-type p {
-    font-size: 55em !important;
-    font-weight: 100;
-    margin-top: 0;
+  body.about h2 {
+    font-size: 1em;
   }
   body .content-wrapper {
-    box-sizsubmiting: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
     width: 100% !important;
     padding: 0 20px;
     font-size: 16px;
@@ -81,6 +92,9 @@
     margin-top: 20px;
     display: none;
   }
+  body .content-wrapper p#summary {
+    display: block;
+  }
   body .content-wrapper p.mobile-text {
     margin-top: 20px !important;
     display: block !important;
@@ -89,15 +103,17 @@
   body .content-wrapper .submit-form-about {
     width: 100%;
   }
-  body .content-wrapper .submit-form-about p#summary {
-    display: block;
-  }
   body .content-wrapper .submit-form-about a {
-    font-size: 1em !important;
+    font-size: 1em;
   }
   body .content-wrapper #submit-form-page {
     float: left;
     width: 100%;
+    margin-top: 0;
+  }
+  body .content-wrapper #submit-form-page input,
+  body .content-wrapper #submit-form-page textarea {
+    font-size: 0.7em;
   }
   body .content-wrapper button#submit,
   body .content-wrapper button#contact,
