--- a/css/media-queries.styl
+++ b/css/media-queries.styl
@@ -17,6 +17,17 @@
             .content-wrapper:first-of-type {
                 .content {
                     padding-bottom 30px
+                    
+                    p {
+                    display block
+                    font-size .55em !important
+                    font-weight 100
+                    margin-top 0
+                    
+                    &.first-of-type {
+                            margin-top 15px
+                        }
+                    }
 
                     #volunteers-list {
                         li {
@@ -30,18 +41,19 @@
                         }
                     }
                 }
+            }
 
-                p {
-                    font-size 55em !important
-                    font-weight 100
-                    margin-top 0
-                }
+
+            h2 {
+                font-size 1em   
             }
 
         }
 
         .content-wrapper {
-            box-sizsubmiting border-box
+            -webkit-box-sizing border-box
+            -moz-box-sizing border-box
+            box-sizing border-box
             width 100% !important
             padding 0 20px
             font-size 16px
@@ -113,28 +125,33 @@
                 margin-top 20px
                 display none
 
+                &#summary {
+                    display block
+                }
+
                 &.mobile-text {
                     margin-top 20px !important
                     display block !important
                     clear both
                 }
-            }
-            
+            }         
+
             .submit-form-about {
                 width 100%
-
-                p#summary  {
-                    display block
-                }
-
+            
                 a {
-                    font-size 1em !important
+                    font-size 1em
                 }
             }
 
             #submit-form-page {
                 float left
                 width 100%
+                margin-top 0
+
+                input, textarea {
+                    font-size 0.7em
+                }
             }
 
             button {
