corrected typo on line 139 of media-queries.styl: .submit-form-about to .submit-page-about

--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -100,10 +100,10 @@
     display: block !important;
     clear: both;
   }
-  body .content-wrapper .submit-form-about {
+  body .content-wrapper .submit-page-about {
     width: 100%;
   }
-  body .content-wrapper .submit-form-about a {
+  body .content-wrapper .submit-page-about a {
     font-size: 1em;
   }
   body .content-wrapper #submit-form-page {
