--- a/css/media-queries.styl
+++ b/css/media-queries.styl
@@ -136,7 +136,7 @@
                 }
             }         
 
-            .submit-form-about {
+            .submit-page-about {
                 width 100%
             
                 a {
