--- a/css/media-queries.styl
+++ b/css/media-queries.styl
@@ -13,17 +13,17 @@
                 padding 0
                 margin 0
             }
-            
+
             .content-wrapper:first-of-type {
                 .content {
                     padding-bottom 30px
-                    
+
                     p {
                     display block
                     font-size .55em !important
                     font-weight 100
                     margin-top 0
-                    
+
                     &.first-of-type {
                             margin-top 15px
                         }
@@ -45,7 +45,7 @@
 
 
             h2 {
-                font-size 1em   
+                font-size 1em
             }
 
         }
@@ -126,7 +126,7 @@
                 display none
 
                 &#summary {
-                    display block
+                    display none
                 }
 
                 &.mobile-text {
@@ -134,20 +134,22 @@
                     display block !important
                     clear both
                 }
-            }         
+            }
 
             .submit-page-about {
                 width 100%
-            
-                a {
+
+                a, a#contact {
                     font-size 1em
                 }
             }
 
             #submit-form-page {
                 float left
-                width 100%
+                width 114%
                 margin-top 0
+                margin-left -20px
+                padding 20px 0 0 0
 
                 input, textarea {
                     font-size 0.7em
