--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -93,7 +93,7 @@
     display: none;
   }
   body .content-wrapper p#summary {
-    display: block;
+    display: none;
   }
   body .content-wrapper p.mobile-text {
     margin-top: 20px !important;
@@ -103,13 +103,16 @@
   body .content-wrapper .submit-page-about {
     width: 100%;
   }
-  body .content-wrapper .submit-page-about a {
+  body .content-wrapper .submit-page-about a,
+  body .content-wrapper .submit-page-about a#contact {
     font-size: 1em;
   }
   body .content-wrapper #submit-form-page {
     float: left;
-    width: 100%;
+    width: 114%;
     margin-top: 0;
+    margin-left: -20px;
+    padding: 20px 0 0 0;
   }
   body .content-wrapper #submit-form-page input,
   body .content-wrapper #submit-form-page textarea {
