--- a/css/media-queries.styl
+++ b/css/media-queries.styl
@@ -31,7 +31,7 @@
 
                     #volunteers-list {
                         li {
-                            width 31%
+                            width 48%
                             margin 0 0 30px 0
                             font-size .40em !important
 
@@ -138,9 +138,19 @@
 
             .submit-page-about {
                 width 100%
+                margin-top 25px
+
+                p#summary {
+                    display block
+                }
 
                 a, a#contact {
                     font-size 1em
+                    display inline-block
+
+                    img {
+                        margin-bottom 25px
+                    }
                 }
             }
 
