--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -119,8 +119,7 @@
   body .content-wrapper #submit-form-page {
     float: left;
     width: 114%;
-    margin-top: 0;
-    margin-left: -20px;
+    margin: 0 0 0 -20px;
     padding: 20px 0 0 0;
   }
   body .content-wrapper #submit-form-page input,
