--- a/css/media-queries.styl
+++ b/css/media-queries.styl
@@ -157,8 +157,7 @@
             #submit-form-page {
                 float left
                 width 114%
-                margin-top 0
-                margin-left -20px
+                margin 0 0 0 -20px
                 padding 20px 0 0 0
 
                 input, textarea {
